<resources>
    <string name="app_name">ExpanceManager</string>
    <string name="expense_manager">EXPENSE MANAGER</string>
    <string name="slogan">Expense tracker  Budget Manager</string>
    <string name="get_started">Get Started</string>
    <string name="btn_e_mail">Sign in with e-mail</string>
    <string name="btn_phone">Sign in with phone</string>
    <string name="btn_gust">Sign in as a guest</string>
    <string name="btn_google">Sign in with Google</string>
    <string name="on_board">Effortlessly add transactions - groceries, bills, or
anything in between. Experience hassle-free expense
management right at your fingertips.</string>

    <string name="currency_code">PKR(pk)</string>
    <string name="country_name">Pakistan</string>
    <string name="select_currency">Select your Currency</string>
    <string name="greet">Good Morning</string>
    <string name="this_month">This Month</string>
    <string name="spending">Spending</string>
    <string name="income">Income</string>
    <string name="balance">Balance: </string>
    <string name="amount">1012</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="see_all">see all</string>
    <string name="no_item_content">Your latest Transactions will appear here.\n
Track your spending &amp; income.
\n Start now.</string>
    <string name="no_trans">No Transaction Yet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="analysis">Analysis\n</string>
    <string name="account">Account</string>
    <string name="more">More</string>
    <string name="category">Shopping from Amazon</string>
    <string name="date">12 jan 2020</string>
    <string name="time">09:10 AM</string>
    <string name="backup">Backup Now</string>
    <string name="transaction">Transaction</string>
    <string name="Scheduled_trx">Scheduled Txns</string>
    <string name="budgets">Budgets</string>
    <string name="categories">category</string>
    <string name="tags">Tags</string>
    <string name="premium">Premium</string>
    <string name="title_add_trax">Add transaction</string>
    <string name="txt_error">Error</string>
    <string name="rs">Rs</string>
    <string name="zero">0</string>
    <string name="other">Other</string>
    <string name="payment">Paymnet</string>
    <string name="cash">Cash</string>
    <string name="other_details">Other Details</string>
    <string name="write_text">Write Text</string>
    <string name="add_tags">Add Tages</string>
    <string name="add_attach">Add Attach</string>
    <string name="select_category">Select Category</string>
    <string name="add_category">Add Category</string>
    <string name="payment_category">Select Payment Mode</string>
    <string name="search">Search here</string>
    <string name="date_created">Date Created</string>
    <string name="amount_menu">Amount</string>
    <string name="sort_by">Sort by</string>
    <string name="add_trx">Tab + to add one</string>
    <string name="view">Views</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="custom">Custom</string>
    <string name="year_month">Year/Month</string>
    <string name="date_range">Date range</string>
    <string name="currency_symbol">$</string>
    <string name="special_offer">Special offer for you!</string>
    <string name="invite_text">25% Savings on Annual Plan! Get it at just Rs.2,000</string>
    <string name="clam_my_offer">clam my offer</string>
    <string name="theme">Theme</string>
    <string name="device_theme">Device Theme</string>
    <string name="bank_account">Bank Account</string>
    <string name="show_balance">Show Balance</string>
    <string name="encript">*******</string>
    <string name="category_name">Category Name</string>
    <string name="no_Budget_heading">No Budgets Set!</string>
    <string name="no_budget_body">Settings Up a budget lets you plan your\nexpenditure, and it ensures that you meet your\ngoal of saving the desired amount of money at the\nend of the month.</string>
    <string name="total_budget">Total Budget</string>
    <string name="category_budget">Set Category Wise Budget</string>
    <string name="budget_tips">Budgeting tip</string>
    <string name="budget_tip_heading">Save First, Then Spend</string>
    <string name="budget_tip_body"><![CDATA[Most people choose to spend first and then save what’s leftover. This makes saving optional & doesn’t ensure consistent saving contribution. Think of saving as a fixed expense & factor it into your budget accordingly. “ Do not save what is left after spending; instead spend what is left after saving. “Who can argue with Warren Buffett?]]></string>
    <string name="category_wise_budget">Category-wise Budget</string>
    <string name="week">week</string>
    <string name="year">Year</string>

    <string name="budget_analyser">Budget Analyser</string>


</resources>